--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
   "name": "electoral-college",
-  "version": "1.5.5",
+  "version": "1.6.0",
   "license": "See LICENSE.md",
   "description": "An application to track and predict Electoral College results in U.S. Presidential Elections",
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.17",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/helper-plugin-utils": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.3.1",
-    "browserslist": "^4.0.0",
-    "core-js": "^3.0.0",
-    "eslint": "^6.1.0",
-    "prettier": "^2.0.0",
-    "prop-types": "^15.7.0",
-    "react-scripts": "3.1.1",
-    "react-test-renderer": "^16.9.0",
-    "webpack": "4.39.1",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-sources": "^1.3.0"
+    "prop-types": "^15.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
