--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electoral-college",
-  "version": "3.0.0-alpha-3",
+  "version": "3.0.0-alpha-4",
   "license": "See LICENSE.md",
   "description": "A module to track and predict Electoral College results in U.S. Presidential Elections",
   "dependencies": {
@@ -19,7 +19,6 @@
     "@babel/preset-typescript": "~7.24.7",
     "@chromatic-com/storybook": "^1.6.1",
     "@rollup/plugin-commonjs": "~26.0.1",
-    "@rollup/plugin-image": "~3.0.3",
     "@rollup/plugin-node-resolve": "~15.2.3",
     "@rollup/plugin-terser": "~0.4.4",
     "@rollup/plugin-typescript": "~11.1.6",
@@ -80,6 +79,9 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "keywords": [
     "react",
     "electoral college",
