--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electoral-college",
-  "version": "4.0.0-alpha",
+  "version": "4.0.0-alpha-1",
   "license": "See LICENSE.md",
   "description": "A module to track and predict Electoral College results in U.S. Presidential Elections",
   "dependencies": {
